--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -91,7 +91,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/umichpic.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer</h3>
@@ -101,11 +101,12 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>School:</strong> <span>University of Michigan</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Computer Science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>GPA:</strong> <span>3.2</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ann Arbor, MI</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ann Arbor / Rochester, MI</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
-                  
+                  <li><i class="bi bi-chevron-right"></i> <strong>Hobbies:</strong> <span>Drawing, Gaming, Baking</span></li>
                 </ul>
               </div>
             </div>
@@ -191,19 +192,20 @@
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
-
+    
         <div class="section-title">
           <h2>Resume</h2>
-          <p>To view a copy of my current resume click <a href="https://drive.google.com/drive/u/0/folders/1tGJNsMuVzJipI4nCYI2ZPfIyjo_1m8gv" target="_blank">HERE!</a>.</p></p>
-        </div>
+          <p class="blankspace">To view a copy of my current resume click <a href="https://drive.google.com/drive/u/0/folders/1tGJNsMuVzJipI4nCYI2ZPfIyjo_1m8gv" target="_blank">HERE!</a>.</p></p>
 
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Objective:</h3>
-            <div class="resume-item pb-0">
-              this is my objective statement
-            </div>
-
+          <h3 class="resume-title">Objective:</h3>
+          <div class="resume-item">
+            <p>I am a senior studying computer science, graduating in May 2024, with a strong foundation in software development and a passion for innovation. 
+              I am proficient in JavaScript, HTML, CSS, Python, C, C++ and a few other languages, and I excel in crafting solutions using data structures, algorithms, and software design principles. 
+              I have experience coding games and game simulations, as well as coding efficient data organizing and analyzing algorithms.  
+              I am eager to contribute to forward-thinking teams, continuously expand my knowledge, and create impactful software solutions. 
+              My goal is to collaborate with experienced professionals as well as peers at the same level as me, refine my skills, be able to aid and teach others getting into technology, and employ technology to address real-world challenges. 
+              I am excited to have more opportunities that enable me to combine technical excellence, innovation, and teamwork to drive positive change.
+            </p>
           </div>
         </div>
 
@@ -216,23 +218,24 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>
+            These are a few of the projects I have done both for a class and independently.
+          </p>
         </div>
 
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-class">Class</li>
+              <li data-filter=".filter-personal">Personal</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-class">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -241,7 +244,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-class">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -250,7 +253,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-class">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -259,7 +262,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-class">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -268,7 +271,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-class">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -277,7 +280,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-class">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -286,7 +289,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-class">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -295,7 +298,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -304,7 +307,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
