updated with resume

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Welcome to my personal wesbite! I am excited to let you know more about me. I am currently a senior at the University of Michigan studying conputer science. 
-            I love exploring new things whether it be from work eperience, school, travel, or TikTok. &#128516; </p>
+          <p>Welcome to my personal website! I am excited to let you know more about me. I am currently a senior at the University of Michigan studying computer science. 
+            I love exploring new things whether it be from work experience, school, travel, or TikTok. &#128516; </p>
         </div>
 
         <div class="row">
@@ -151,7 +151,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">HTLM <i class="val">100%</i></span>
+              <span class="skill">HTML <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -195,7 +195,7 @@
     
         <div class="section-title">
           <h2>Resume</h2>
-          <p class="blankspace">To view a copy of my current resume click <a href="https://drive.google.com/drive/u/0/folders/1tGJNsMuVzJipI4nCYI2ZPfIyjo_1m8gv" target="_blank">HERE!</a>.</p></p>
+          <p class="blankspace">To view a copy of my current resume click <a href="https://drive.google.com/file/d/1WgvutEGaS7ivWETIdqS13SeX-qq4Q7ir/view?usp=drive_link" target="_blank">HERE!</a>.</p></p>
 
           <h3 class="resume-title">Objective:</h3>
           <div class="resume-item">
@@ -218,9 +218,6 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>
-            These are a few of the projects I have done both for a class and independently.
-          </p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -239,7 +236,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Using priority queues and implementing templated containers, inheritance and interface programming, streaming algorithms"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Using priority queues and implementing templated containers, inheritance and interface programming, streaming algorithms"><i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
           </div>
@@ -248,7 +245,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Working with hash tables, managing and creating larger data structures through composition"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Working with hash tables, managing and creating larger data structures through composition"><i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
           </div>
@@ -260,7 +257,7 @@
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="I built an image resizing program using a seam-carving algorithm.
                 The learning goals of this project include Testing, Debugging, Pointers, Arrays, Strings, Streams, IO, and Abstract Data Types in C. I gained practice with C-style pointers, arrays, and structs.
                 In the end, I had a program that used seam carving for content-aware resizing of images. The algorithm works by finding and removing “seams” in the image that pass through the least essential pixels.
-                "><i class="bx bx-plus"></i></a>
+                "><i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
           </div>
@@ -269,7 +266,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Implementing optimization algorithms (eg. Traveling Salesperson and Knapsack)"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Implementing optimization algorithms (eg. Traveling Salesperson and Knapsack)"><i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
           </div>
@@ -281,7 +278,7 @@
                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Euchre is a card game popular in Michigan.
                 The learning goals of this project include Abstract Data Types in C++, Derived Classes, Inheritance, and Polymorphism. I gained practice with C++-style Object Oriented Programming (OOP) with classes and virtual functions.
                 In the end, I created a program that simulates a game of Euchre, supporting a AI player and a Human player.
-                "><i class="bx bx-plus"></i></a>
+                "><i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
           </div>
@@ -290,7 +287,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
           </div> -->
@@ -299,7 +296,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
           </div> -->
@@ -308,9 +305,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="This is the personal website that you are viewing right now. I began using a template I had found online that fit the look I was going for.
-                I then heavily editted the template and changed a good amount of the structure to better suit my needs and properly showcase my skills and achievement in a way that was more personalized to who I am. I eddited and changed the HTML as well as CSS documents and asset files heavily so they would 
-                properly be able to be hosted on GitHub Pages. I also slightly editted the js files slightly to change some functions to those I like."><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="This is the personal website that you are viewing right now. I began using a template from Bootstrap that fit the look I was going for.
+                I then heavily edited the template and changed a good amount of the structure to better suit my needs and properly showcase my skills and achievements in a way that was more personalized to who I am. 
+                I edited and changed the HTML and CSS documents as well as the asset files heavily so they would properly be able to be hosted on GitHub Pages. I also slightly edited the js files to change some functions, such as the popup you clicked to view the projects more in-depth."><i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
           </div>
@@ -319,7 +316,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
           </div> -->
@@ -335,7 +332,6 @@
 
         <div class="section-title">
           <h2>Experience</h2>
-          <p>I have work experience within and outside of software.</p>
         </div>
 
         <div class="row">
