--- a/inner-page.html
+++ b/inner-page.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inner Page - iPortfolio Bootstrap Template</title>
+  <title>Inner Page - Niki's Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <h1 class="text-light"><a href="index.html">Niki Patel</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/npaddle" target="_blank" rel="noopener noreferrer" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/niki-patel02/" target="_blank" rel="noopener noreferrer" class="linkedin"><i class="bx bxl-linkedin"></i></a>
