final site edits

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     
         <div class="section-title">
           <h2>Resume</h2>
-          <p class="blankspace">To view a copy of my current resume click <a href="https://drive.google.com/file/d/1WgvutEGaS7ivWETIdqS13SeX-qq4Q7ir/view?usp=drive_link" target="_blank">HERE!</a>.</p></p>
+          <p class="blankspace">To view a copy of my current resume click <a href="https://drive.google.com/file/d/1nWLVoA71H0cyUEDkpmRCUM_hd2GuCFb-/view?usp=sharing" target="_blank">HERE!</a>.</p></p>
 
           <h3 class="resume-title">Objective:</h3>
           <div class="resume-item">
@@ -236,7 +236,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Using priority queues and implementing templated containers, inheritance and interface programming, streaming algorithms"><i class="bx bx-message-alt-error"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Using priority queues and implementing templated containers, inheritance and interface programming, streaming algorithms.
+                Developed a streaming algorithm for a simulation of a zombie tower defense game which included zombies of different speeds, health, and distances. 
+                Implemented templated containers that took in arrays of zombie info to generate zombies for the round by user input or at random. 
+                Utilized priority queues to automate player decisions and Getopt for multiple command line functions while focusing on space and memory optimization.">
+                <i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
           </div>
@@ -245,7 +249,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Working with hash tables, managing and creating larger data structures through composition"><i class="bx bx-message-alt-error"></i></a>
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Working with hash tables, managing and creating larger data structures through composition.
+                Developed a program to emulate a relational database with an interface based on a subset of a standard query language.
+                Gained experience writing code that makes use of multiple interacting data structures.
+                In the end, I designed a range of algorithms to handle different situations which could evaluate different representations of the same data.
+                I also learned how to evaluate which data structures would be optimal to use for a set of tasks and how to evaluate runtime and storage tradeoffs.">
+                <i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
           </div>
@@ -266,7 +275,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Implementing optimization algorithms (eg. Traveling Salesperson and Knapsack)"><i class="bx bx-message-alt-error"></i></a>
+                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Implementing optimization algorithms (eg. Traveling Salesperson and Knapsack)
+                Given a graph as a collection of x-y coordinates (vertices) and a set of rules about how they are connected (edges), I created a program split into 3 parts.
+                1: Calculated a Minimum Spanning Tree to find the subset of edges that represent the lowest edge weight cost to connect all the vertices.
+                2: Researched and implemented an algorithm to approximate a solution to the Travelling Salesperson Problem, the solution did not have to be optimal but did have to be fast.
+                3: Calculated the weight of the optimal TSP solution using a branch and bound algorithm.">
+                <i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
           </div>
