added eecs485 proj

--- a/index.html
+++ b/index.html
@@ -297,14 +297,22 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-class">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-class">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-message-alt-error"></i></a>
+                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Developed an Instagram clone with a Python/Flask REST API back-end connected to an SQLite3 database and a
+                JavaScript/React front-end.
+                Implemented user sign up/sign in, commenting, posting, liking, and following features along with REST API endpoints to
+                properly display and manipulate information from the back-end in the front-end.
+                Deployed to AWS after altering database to use AWS RDS and converting code to properly retrieve information from
+                within the AWS cloud.
+                Employed AWS EC2, CloudFront, S3, ECR, ECS, ELB, CloudFormation, Fargate, RDS, and IAM in different configurations
+                from fully managed to server-less and from containerized to virtualized to properly take advantage of the AWS efficient
+                auto-scaling, storage, load balancing, and content delivery."><i class="bx bx-message-alt-error"></i></a>
               </div>
             </div>
-          </div> -->
+          </div>
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-class">
             <div class="portfolio-wrap">
