edit sizing on contact info

--- a/contact.html
+++ b/contact.html
@@ -31,15 +31,14 @@
         <h1 class="introText">Contact Us</h1>
       </div>
       <div class="contactimg" style="padding-top: 100px; padding-bottom: 100px;">
-        
-        <div class="text" style="padding-left: 100px; padding-right: 50px; width: 100px;">
+        <div class="text" style="width: 100%; padding-bottom: 20px;">
           <h3>Call us at</h3>
           <a href="tel:5869326300">(586) 932-6300</a>
           <h3>We are located at</h3>
-          <a href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D" target="_blank">8775 Hall Rd, Utica, MI 48317</a>
+          <a href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D">8775 Hall Rd, Utica, MI 48317</a>
         </div>
         <div class="image">
-          <img src="/images/storeFront.jpg" style="width:500px;">
+          <img src="/images/storeFront.jpg" style="width:80%;">
         </div>
       </div>
     </main>
