--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         social links if they have social media
         client tesimony 
         thankgiving special on homepage-->
-        <a href="/index.html" class="logo"><img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 250px; height: 50px;"></a>
+        <a href="/index.html" class="logo"><img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 100%; height: 50px;"></a>
         <div class="header-right">
           <a href="/about.html">About</a>
           <a href="/services.html">Services</a>
@@ -166,14 +166,14 @@
       <div class="contact">
         <h2 class="titleCard">Contact</h2>
         <div class="contactimg">
-          <div class="image">
-            <img src="/images/storeFront.jpg" style="width:500px;">
-          </div>
-          <div class="text" style="padding-left: 50px; width: 100px;">
+          <div class="text" style="width: 100%; padding-bottom: 20px;">
             <h3>Call us at</h3>
             <a href="tel:5869326300">(586) 932-6300</a>
             <h3>We are located at</h3>
             <a href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D">8775 Hall Rd, Utica, MI 48317</a>
+          </div>
+          <div class="image">
+            <img src="/images/storeFront.jpg" style="width:80%;">
           </div>
         </div>
       </div>
