fixing image width

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
           <a href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D">8775 Hall Rd, Utica, MI 48317</a>
         </div>
         <div class="image">
-          <img src="/images/storeFront.jpg" style="width:80%;">
+          <img src="/images/storeFront.jpg" style="width:auto; height: auto;">
         </div>
       </div>
     </main>
