fix title sizing

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class="fixedHeader" style="background-image: url(/images/backgroundBanner.jpg);">
         <div style="padding-top: 80px;">
-          <img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="height: 150px; width: 700px;">
+          <img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="height: 150px; width: 60%;">
         </div>
       </div>
       <div class="aboutus">
