unfixed header and facial detail template added

--- a/about.html
+++ b/about.html
@@ -10,16 +10,8 @@
   </head>
   <body>
     <main>
-      <div class="header" style="position: sticky; width: 100%; top: 0;">
-        <!-- add header items with links
-        title should link back to homepage
-        contact page for location and number
-        services page with some pics of stuff nad prices with links to contact page
-        about page if they want to talk more about themself
-        social links if they have social media
-        client tesimony 
-        thankgiving special on homepage-->
-        <a href="/index.html" class="logo"><img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 250px; height: 50px;"></a>
+      <div class="header" style="width: 100%; top: 0;">
+        <a href="/index.html" class="logo"><img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 100%; height: 50px;"></a>
         <div class="header-right">
           <a href="/about.html">About</a>
           <a href="/services.html">Services</a>
@@ -27,8 +19,8 @@
           <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank">Socials</a>
         </div>
       </div>
-      <div class="introIMG" style="background-image: url(/images/backgroundBanner.jpg);">
-        <h1 class="introText">About Us</h1>
+      <div class="introIMG" style="background-color: orange;">
+        <h1 class="introText" style="color: #68b701;">About Us</h1>
       </div>
       
       <div class="mission">
