--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
   </head>
   <body>
     <main>
-      <div class="header" style="position: sticky; width: 100%; top: 0;">
-        <!-- add header items with links
-        title should link back to homepage
-        contact page for location and number
-        services page with some pics of stuff nad prices with links to contact page
-        about page if they want to talk more about themself
-        social links if they have social media
-        client tesimony 
-        thankgiving special on homepage-->
+      <div class="header" style="width: 100%; top: 0;">
         <a href="/index.html" class="logo"><img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 100%; height: 50px;"></a>
         <div class="header-right">
           <a href="/about.html">About</a>
@@ -27,7 +19,7 @@
           <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank">Socials</a>
         </div>
       </div>
-      <div class="fixedHeader" style="background-image: url(/images/backgroundBanner.jpg);">
+      <div class="fixedHeader" style="background-color: orange;">
         <div style="padding-top: 80px;">
           <img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="height: 150px; width: 60%;">
         </div>
