--- a/services.html
+++ b/services.html
@@ -10,16 +10,8 @@
   </head>
   <body>
     <main>
-      <div class="header" style="position: sticky; width: 100%; top: 0;">
-        <!-- add header items with links
-        title should link back to homepage
-        contact page for location and number
-        services page with some pics of stuff nad prices with links to contact page
-        about page if they want to talk more about themself
-        social links if they have social media
-        client tesimony 
-        thankgiving special on homepage-->
-        <a href="/index.html" class="logo"><img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 250px; height: 50px;"></a>
+      <div class="header" style="width: 100%; top: 0;">
+        <a href="/index.html" class="logo"><img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 100%; height: 50px;"></a>
         <div class="header-right">
           <a href="/about.html">About</a>
           <a href="/services.html">Services</a>
@@ -27,8 +19,8 @@
           <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank">Socials</a>
         </div>
       </div>
-      <div class="introIMG" style="background-image: url(/images/backgroundBanner.jpg);">
-        <h1 class="introText">Our Services</h1>
+      <div class="introIMG" style="background-color: orange;">
+        <h1 class="introText" style="color: #68b701;">Our Services</h1>
       </div>
       <h1 class="titleCard">Here's What We Offer</h1>
       <div class="services-container">
@@ -238,62 +230,92 @@
           <ul class="dropdown-content">
             <li>
               Face Cleanup -&ensp; $20
+              <p class="facialDetails">FIX</p>
               <span class="service-time">20 mins</span>
             </li>
             <li>
               Microdermabrasion Facial -&ensp; $35
+              <p class="facialDetails">FIX</p>
               <span class="service-time">30 mins</span>
             </li>
             <li>
-              Mini Facial -&ensp; $45
+              <p>Mini Facial -&ensp; $45</p>
+              <p class="facialDetails">Instant glow and quick replenish. Mini facial include deep cleansing , toning , exfoliating, steam, mask followed by ideal moisturizer and sunscreen.</p>
               <span class="service-time">30 mins</span>
             </li>
             <li>
               Relaxing Facial -&ensp; $45
+              <p class="facialDetails">FIX</p>
               <span class="service-time">1 hour</span>
             </li>
             <li>
               Herbal Facial -&ensp; $50
+              <p class="facialDetails">FIX</p>
               <span class="service-time">1 hour</span>
             </li>
             <li>
               Fruit Facial -&ensp; $50
+              <p class="facialDetails">FIX</p>
               <span class="service-time">1 hour</span>
             </li>
             <li>
               Back Facial / Treatement -&ensp; $50
+              <p class="facialDetails">
+                Treat your back to a cleansing, soothing message, exfoliating, steam and mask, blackheads extraction. We came across to make your back 
+                <br>perfect for summer or any time of the year. Great for those who suffer from back acne.</p>
               <span class="service-time">45 mins</span>
             </li>
             <li>
               Sensitive Facial -&ensp; $60
+              <p class="facialDetails">
+                Created for intolerant complexions, this soothing treatment is designed to strengthen fragile skin while reducing redness and discouraging irritation. 
+                <br>You'll experience calming skin cleansing, gentle exfoliation, a relaxing facial massage, and an ultra soothing mask customized specially for your skins 
+                <br>unique sensitivities. emerge with skin that feels comfortable, smooth and less reactive to aggravating stressors. the perfect choice for any sensitive skin.</p>
               <span class="service-time">1 hour</span>
             </li>
             <li>
               Barrier Repair + Relax Facial -&ensp; $65
+              <p class="facialDetails">FIX</p>
               <span class="service-time">1 hour</span>
             </li>
             <li>
               Custom Blend Facial with Microdermabrasion -&ensp; $65
+              <p class="facialDetails">FIX</p>
               <span class="service-time">1 hour</span>
             </li>
             <li>
               Acne Facial -&ensp; $70
+              <p class="facialDetails">
+                An absolute must if you're breakout prone, have clogged pores or blackheads. You'll receive a personal skin assessment followed by deep pore cleansing, 
+                <br>exfoliating and medicated amino-mask that contains enzymes, antioxidants, antiseptic and anti-inflammatory ingredients. Make this effective treatment 
+                <br>a part of your continuing fights against acne.</p>
               <span class="service-time">1 hour</span>
             </li>
             <li>
               Anti-Aging Facial -&ensp; $70
+              <p class="facialDetails">
+                This breakthrough treatment is created for skin that's showing signs of age-sagging, fine lines and dullness. A thorough cleansing is followed by our 
+                <br>exclusive layered exfoliation process, energizing massage and ultra tightening mask. Its all designed to restore firmness to sagging skin as it lifts, 
+                <br>tightens and smoothes. You'll instantly experience firmer, more resilient skin.</p>
               <span class="service-time">1 hour</span>
             </li>
             <li>
               Brightening (Vitamin C) Facial -&ensp; $70
+              <p class="facialDetails">
+                This Professional Peel System brightens dull skin, encourages collagen production and dramatically resurfaces skin complexion  
+                <br>and texture, providing immediate results. Uniquely developed to diminish the irritation and dehydration commonly associated
+                <br>with peels. Gentle enough to use on most skin types. This system includes: Vibran-C Peel and Vibran-C Activator developed to work 
+                <br>synergistically and effectively.</p>
               <span class="service-time">1 hour</span>
             </li>
             <li>
               Oxygen Glow Facial -&ensp; $70
+              <p class="facialDetails">FIX</p>
               <span class="service-time">1 hour</span>
             </li>
             <li>
               Firm + Lift Facial -&ensp; $70
+              <p class="facialDetails">FIX</p>
               <span class="service-time">1 hour</span>
             </li>
           </ul>
