test on phone view

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank">Socials</a>
         </div>
       </div>
-      <div class="fixedHeader" style="background-color: orange;">
+      <div class="fixedHeader" style="background-color: rgb(255, 185, 55);">
         <div style="padding-top: 80px;">
-          <img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="height: 150px; width: 60%;">
+          <img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="height: 150px;">
         </div>
       </div>
       <div class="aboutus">
@@ -30,9 +30,9 @@
           <h3 style="font-size: 25px;">Welcome to Amazing Brows & Beauty!</h3>
           We're here to help you feel like your best self! Treat yourself to our amazing services like threading, waxing, facials, and much more.
           Our team is prepared to sit you down with comfort and send you off with condfidence. 
-          <p>Get ready to discover your new favourite spot for beauty!</p>
+          <p>Click below to discover your new favorite spot for beauty!</p>
           <p><a href="/about.html" class="button">
-                    Learn More
+                    About Us / Policies
           </a></p>
         </div>
       </div>
@@ -63,7 +63,7 @@
                   Click below to read more or scroll down to see reviews from satisfied clients!</p>
                 <p>$5 - 35</p>
                 <p><a href="/services.html" class="button">
-                  Read more
+                  View Services
                 </a></p>
               </div>
             </div>
@@ -80,7 +80,7 @@
                   Click below to read more or scroll down to see reviews  from satisfied clients!</p>
                 <p>$13 - 60</p>
                 <p><a href="/services.html" class="button">
-                  Read more
+                  View Services
                 </a></p>
               </div>
             </div>
@@ -97,7 +97,7 @@
                   Click below to read more or scroll down to see reviews  from satisfied clients!</p>
                 <p>$20 - 70</p>
                 <p><a href="/services.html" class="button">
-                  Read more
+                  View Services
                 </a></p>
               </div>
             </div>
