--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
           <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank">Socials</a>
         </div>
       </div>
-      <div class="introIMG" style="background-color: orange;">
+      <div class="introIMG" style="background-color: rgb(255, 185, 55);">
         <h1 class="introText" style="color: #68b701;">Our Services</h1>
       </div>
       <h1 class="titleCard">Here's What We Offer</h1>
