phone test again

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="fixedHeader" style="background-color: rgb(255, 185, 55);">
         <div style="padding-top: 80px;">
-          <img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="height: 150px;">
+          <img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="height: 150px; width: 80%;">
         </div>
       </div>
       <div class="aboutus">
