--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
           <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank">Socials</a>
         </div>
       </div>
-      <div class="introIMG" style="background-color: rgb(255, 185, 55);">
+      <div class="introIMG" style="background-color: #efefef;">
         <h1 class="introText" style="color: #68b701;">Contact Us</h1>
       </div>
       <div class="contactimg" style="padding-top: 100px; padding-bottom: 100px;">
