--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank">Socials</a>
         </div>
       </div>
-      <div class="fixedHeader" style="background-color: rgb(255, 185, 55);">
+      <div class="fixedHeader" style="background-color: #efefef;">
         <div style="padding-top: 80px;">
           <img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="height: 150px; width: 80%;">
         </div>
