sizing fixes and undoing service page

--- a/contact.html
+++ b/contact.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
-  <body>
+  <body style="background-color: lightgray; margin: 0;">
     <main>
       <div class="header" style="width: 100%; top: 0;">
-        <a href="/index.html" class="logo"><img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 100%; height: 50px;"></a>
+        <a href="/index.html" class="logo" style="color: #68b701; font-size: 20px; font-weight: bold;">Amazing Browz & Beauty</a>
         <div class="header-right">
+          <a href="/index.html">Home</a>
           <a href="/about.html">About</a>
           <a href="/services.html">Services</a>
           <a href="/contact.html">Contact</a>
-          <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank">Socials</a>
+          <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank"><img src="/images/facebookLogo.png" style="width: 20px;"></a>
+          <a href="https://www.instagram.com/" target="_blank"><img src="/images/instaLogo.png" style="width: 20px;"></a>
         </div>
       </div>
-      <div class="introIMG" style="background-color: #efefef;">
+      <div class="introIMG" style="background-color: grey;">
         <h1 class="introText" style="color: #68b701;">Contact Us</h1>
       </div>
       <div class="contactimg" style="padding-top: 100px; padding-bottom: 100px;">
