--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
-  <body>
+  <body style="background-color: lightgray; margin: 0;">
     <main>
       <div class="header" style="width: 100%; top: 0;">
-        <a href="/index.html" class="logo"><img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 100%; height: 50px;"></a>
+        <a href="/index.html" class="logo" style="color: #68b701; font-size: 20px; font-weight: bold;">Amazing Browz & Beauty</a>
         <div class="header-right">
+          <a href="/index.html">Home</a>
           <a href="/about.html">About</a>
           <a href="/services.html">Services</a>
           <a href="/contact.html">Contact</a>
-          <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank">Socials</a>
+          <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank"><img src="/images/facebookLogo.png" style="width: 20px;"></a>
+          <a href="https://www.instagram.com/" target="_blank"><img src="/images/instaLogo.png" style="width: 20px;"></a>
         </div>
       </div>
-      <div class="fixedHeader" style="background-color: #efefef;">
+      <div class="fixedHeader" style="background-color: grey; min-height: 350px;">
         <div style="padding-top: 80px;">
-          <img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="height: 150px; width: 80%;">
+          <img src="/images/IMG-20210821-WA0024-removebg-preview.png">
         </div>
       </div>
       <div class="aboutus">
         <h2 class="titleCard">About Us</h2>
-        <div class="briefIntro" >
-          <h3 style="font-size: 25px;">Welcome to Amazing Brows & Beauty!</h3>
+        <div class="briefIntro" style="text-align: center; min-height: 300px;">
+          <h3 style="font-size: 25px; padding-top: 30px;">Welcome to Amazing Brows & Beauty!</h3>
           We're here to help you feel like your best self! Treat yourself to our amazing services like threading, waxing, facials, and much more.
           Our team is prepared to sit you down with comfort and send you off with condfidence. 
           <p>Click below to discover your new favorite spot for beauty!</p>
@@ -39,8 +41,8 @@
       <div class="specials">
         <h2 class="titleCard">Specials</h2>
         <div class="banner" style="background-image: url(https://windybot.com/img/WkrADcYOgv2nxtsdV0az.jpg);">
-          <div style="color: aliceblue;">
-            <h2 style="font-size: 20px;">We are currently having Thanksgiving specials!</h2>
+          <div style="color: aliceblue; padding-top: 50px;">
+            <h2 style="font-size: 30px;">We are currently having Thanksgiving specials!</h2>
             Please contact us to learn more
             <p><a href="/contact.html" class="button">
               Contact
@@ -50,8 +52,8 @@
       </div>
       <div class="services">
         <!-- START SERVICES DISPLAY CONTAINER -->
-        <h2 class="titleCard">Services</h2>
-        <div class="row">
+        <h2 class="titleCard" style="margin-top: 100px;">Services</h2>
+        <div class="row" style="padding-left: 50px;">
           <div class="column">
             <div class="card">
               <img src="https://media.istockphoto.com/id/603912306/photo/master-in-the-cabin-removes-facial-hair-strand.jpg?s=612x612&w=0&k=20&c=FdMxBRQyZNn98Cvc7Okg_dmujvsrmBHbBzr3XluzT_8=" alt="Service1" style="width:100%">
@@ -106,9 +108,9 @@
         <!-- END SERVICES DISPLAY CONTAINER -->
       </div>
       <div class="reviews">
-        <h2 class="titleCard">Reviews</h2>
+        <h2 class="titleCard" style="margin-top: 100px;">Reviews</h2>
         <!-- START REVIEWS DISPLAY CONTAINER -->
-        <div class="revRow">
+        <div class="revRow" style="padding-left: 20px;">
           <div class="revCol">
             <div class="content">
               <h2>Grace Stanczak</h2>
@@ -156,7 +158,7 @@
         <!-- END REVIEWS DISPLAY CONTAINER -->
       </div>
       <div class="contact">
-        <h2 class="titleCard">Contact</h2>
+        <h2 class="titleCard" style="margin-top: 100px;">Contact</h2>
         <div class="contactimg">
           <div class="text" style="width: 100%; padding-bottom: 20px;">
             <h3>Call us at</h3>
