--- a/about.html
+++ b/about.html
@@ -8,31 +8,33 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
-  <body>
+  <body style="background-color: lightgray; margin: 0;">
     <main>
       <div class="header" style="width: 100%; top: 0;">
-        <a href="/index.html" class="logo"><img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 100%; height: 50px;"></a>
+        <a href="/index.html" class="logo" style="color: #68b701; font-size: 20px; font-weight: bold;">Amazing Browz & Beauty</a>
         <div class="header-right">
+          <a href="/index.html">Home</a>
           <a href="/about.html">About</a>
           <a href="/services.html">Services</a>
           <a href="/contact.html">Contact</a>
-          <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank">Socials</a>
+          <a href="https://www.facebook.com/p/Amazing-Browz-Beauty-100072103874821/" target="_blank"><img src="/images/facebookLogo.png" style="width: 20px;"></a>
+          <a href="https://www.instagram.com/" target="_blank"><img src="/images/instaLogo.png" style="width: 20px;"></a>
         </div>
       </div>
-      <div class="introIMG" style="background-color: #efefef;">
+      <div class="introIMG" style="background-color: grey;">
         <h1 class="introText" style="color: #68b701;">About Us</h1>
       </div>
       
       <div class="mission">
         <h3 class="titleCard">Who we are</h3>
-        We are a small business who make it our mission to provide a comfortable experience.
+        <p style="padding-left: 5px;">We are a small business who make it our mission to provide a comfortable experience.
         We're experts at what we do, but knowing the best techniques is only part of the process. 
         With our high quality products and professional beuticians, we strive for excellent service.
         Whether this is a first time try or you're a regular, your satisfaction is of utmost importance!
+        </p>
       </div>
       <div class="policy">
         <h3 class="titleCard">Policies</h3>
-        Write any policies you want clients to know- cancellation, reservation, allergy information, arrival time, promotions and discounts
         <ul style="list-style-type:disc;">
           <li>We do take walk-ins, but to guarantee your service is done in time please call and reserve an appointment ahead of time</li>
           <li>Please notify us of any allergies or sensitivities to aromas or ingredients during scheduling or at time of service</li>
