--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a href="https://www.instagram.com/" target="_blank"><img src="/images/instaLogo.png" style="width: 20px;"></a>
         </div>
       </div>
-      <div class="fixedHeader" style="background-color: grey; min-height: 350px;">
+      <div class="fixedHeader" style="">
         <div style="padding-top: 80px;">
           <img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 70%;">
         </div>
