--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="introIMG" style="background-color: grey">
-        <h1 class="introText" style="color: #68b701;">Our Services</h1>
+        <h1 class="introText" style="color: #68b701;">Services</h1>
       </div>
       <h1 class="titleCard">Here's What We Offer</h1>
       <div class="services-container">
